--- a/site.yml
+++ b/site.yml
@@ -1,9 +1,9 @@
 ---
-- hosts: all
-  roles: ssh-server
 
-- hosts: nextcloud
-  roles: backup-target
+- hosts: nextcloud-host
+  roles:
+    - backup-target
 
-- hosts: nextbackup
-  roles: backup-host
+- hosts: backup-host
+  roles:
+    - backup-host
