Simplify storage location

--- a/roles/backup-host/tasks/main.yml
+++ b/roles/backup-host/tasks/main.yml
@@ -42,13 +42,9 @@
     group: "{{ backup_user }}"
     mode: 0500
 
-- name: "backup directory for {{ item }} is present"
+- name: "{{ backup_user }} has rights on /data/backup"
   file:
-    path: "/data/backup/{{ item }}"
+    path: "/data/backup/"
     state: directory
     mode: 0700
     owner: "{{ backup_user }}"
-    group: "{{ backup_user }}"
-  loop:
-    - database
-    - filesystem
